# gdt2dicom

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: command.rs  dcm_worklist.rs  dcm_xml.rs  dicom_jpeg_extraction.rs  error.rs  gdt.rs  gui.rs  lib.rs  main.rs  opp_xml.rs  vdds.rs  worklist_conversion.rs
src/gui/: about_dialog.rs  auto_convert.rs  auto_convert_list.rs  copyright_dialog.rs  cstore_server.rs  dicom_server.rs  state.rs  worklist_folder.rs
