[package]
name = "gdt2dicom"
version = "0.1.0"
edition = "2021"
default-run = "gdt2dicom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4"
tempfile = "3.4.0"
xml-rs = "0.8.4"
chrono = "0.4.26"
rust-ini = "0.20.0"
env_logger = "0.11.0"
local-encoding-ng = "0.1.0"
encoding = "0.2.33"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
uuid = { version = "1.10.0", features = ["v4"] }

[[bin]]
name = "dicom2gdt"
test = false
bench = false

[[bin]]
name = "gdt2opp"
test = false
bench = false

[[bin]]
name = "gdt2vdds"
test = false
bench = false

[[bin]]
name = "testargs"
test = false
bench = false

[[bin]]
name = "gui"
test = false
bench = false
