[package]
name = "gdt2dicom"
version = "0.1.0"
edition = "2021"
default-run = "gdt2dicom"

[package.metadata.bundle.bin.gdt2dicom-gui]
name = "gdt2dicom"
identifier = "ch.ywesee.gdt2dicom"
icon = [
    "Assets.xcassets/AppIcon.appiconset/16-mac.png",
    "Assets.xcassets/AppIcon.appiconset/32-mac.png",
    "Assets.xcassets/AppIcon.appiconset/64-mac.png",
    "Assets.xcassets/AppIcon.appiconset/128-mac.png",
    "Assets.xcassets/AppIcon.appiconset/256-mac.png",
    "Assets.xcassets/AppIcon.appiconset/512-mac.png"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
log = "0.4"
tempfile = "3.4.0"
xml-rs = "0.8.4"
chrono = "0.4.26"
rust-ini = "0.20.0"
env_logger = "0.11.0"
local-encoding-ng = "0.1.0"
encoding = "0.2.33"
gtk = { version = "0.9.0", package = "gtk4", features = ["v4_14"] }
uuid = { version = "1.10.0", features = ["v4"] }
notify = "6.1.1"
async-channel = "2.3.1"
tokio = { version = "1", features = ["io-util", "process", "rt-multi-thread"] }
serde_json = "1.0"
serde =  { version = "1.0.210", features = ["derive"] }
shared_child = "1.0.1"


[[bin]]
name = "dicom2gdt"
test = false
bench = false

[[bin]]
name = "gdt2opp"
test = false
bench = false

[[bin]]
name = "gdt2vdds"
test = false
bench = false

[[bin]]
name = "testargs"
test = false
bench = false

[[bin]]
name = "gdt2dicom-gui"
test = false
bench = false
